[package]
name = "ecash-ng-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { version = "0.7.1", features = [ "zeroize", "groups" ] }
ff = "0.12.1"
group = "0.12.1"
rand = "0.8"
rand_chacha = "0.3.1"
bitcoin_hashes = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.5"